--- a/ToDo/res/layout/activity_lista_tarefas.xml
+++ b/ToDo/res/layout/activity_lista_tarefas.xml
@@ -11,7 +11,18 @@
     <ListView
         android:id="@+id/lw_tarefa"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnAdicionarTarefa" >
     </ListView>
+
+    <Button
+        android:id="@+id/btnAdicionarTarefa"
+        android:layout_width="70sp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/btnAdicionarTarefa"
+        android:textSize="25sp"
+        />
 
 </RelativeLayout>
