--- a/ToDo/res/layout/activity_principal.xml
+++ b/ToDo/res/layout/activity_principal.xml
@@ -19,6 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:digits="0123456789"
+        android:maxLength="10"
         android:inputType="phone" >
 
         <requestFocus />
