--- a/ToDo/res/layout/list_item_tarefa.xml
+++ b/ToDo/res/layout/list_item_tarefa.xml
@@ -7,12 +7,16 @@
     <TextView
         android:id="@+id/id_tarefa"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="8sp"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/nm_tarefa"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center"
+        android:padding="8sp"
+        android:textSize="24sp" />
 
 </LinearLayout>
